--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -10,20 +10,55 @@ Job App List
     <h1 class="display-6 ms-2">Jobs Applied for</h1>
 
     <div class="container p-2">
+        <div class="row p-1">
+            <div class="col-1 text-start">
+
+            </div>
+            <div class="jobapp col-1 text-start">
+                <p class="h4 bg-primary text-light">Date</p>
+            </div>
+
+            <div class="jobapp col text-start">
+                <p class="h4 bg-primary text-light">Job Title</p>
+            </div>
+            <div class="jobapp col-2 text-start">
+                <p class="h4 bg-primary text-light">Company</p>
+            </div>
+            <div class="jobapp col-2 text-start">
+                <p class="h4 bg-primary text-light">City/State</p>
+            </div>
+            <div class="jobapp col-1 text-start">
+                <p class="h4 bg-primary text-light">Source</p>
+            </div>
+            <div class="jobapp col-1 text-start">
+                <p class="h4 bg-primary text-light">Job No</p>
+            </div>
+        </div>
+
         {% for jobapp in jobapps %}
         <div class="row p-1">
-        <div class="col-1">
-            <button type="button" class="btn btn-sm btn-outline-primary">View</button>
-        </div>
-            <div class="jobapp col-1">{{ jobapp.applied_dt|date:"SHORT_DATE_FORMAT" }}</div>
+            <div class="col-1 text-start">
+                <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+            </div>
+            <div class="jobapp col-1 text-start">{{ jobapp.applied_dt|date:"SHORT_DATE_FORMAT" }}</div>
 
-            <div class="jobapp col">
-        <a href="{% url 'jobapp' slug=jobapp.slug %}">
-            {{ jobapp.title }}
-        </a>
-    </div>
-            <div class="jobapp col">{{ jobapp.company }}</div>
-
+            <div class="jobapp col text-start">
+                <a href="{% url 'jobapp' slug=jobapp.slug %}">
+                    {{ jobapp.title }}
+                </a>
+            </div>
+            <div class="jobapp col-2 text-start">
+                {{ jobapp.company }}
+            </div>
+            <div class="jobapp col-2 text-start">
+                {{ jobapp.city }}, {{ jobapp.state }}
+            </div>
+            <div class="jobapp col-1 text-start">
+                {{ jobapp.job_source }}
+            </div>
+            <div class="jobapp col-1 text-start">
+                {{ jobapp.job_number }}
+            </div>
         </div>
         {% endfor %}
     </div>
