adding aggragate data to main page

--- a/jobtracker/templates/home.html
+++ b/jobtracker/templates/home.html
@@ -5,5 +5,30 @@ Job Tracker
 {% endblock %}
 
 {% block content %}
-<h1>Main Page</h1>
+<div class="container m-2">
+    <p class="h4 bg-primary text-light">Job Statistics</p>
+<p>Total jobs applied for: {{ jobcount }}</p>
+</div>
+
+<div class="container m-2">
+    <p class="h4 bg-primary text-light">Count By Date</p>
+    <div class="row p-1">
+            <div class="jobapp col-2 text-start">
+                Applied Date
+            </div>
+            <div class="jobapp col-2 text-start">
+                Number of jobs
+            </div>
+    {% for count in daily_counts %}
+        <div class="row p-1">
+            <div class="jobapp col-2 text-start">
+                {{ count.applied_dt|date:"SHORT_DATE_FORMAT" }}
+            </div>
+            <div class="jobapp col-2 text-start">
+                {{ count.applied_dt__count }}
+            </div>
+        </div>
+    {% endfor %}
+</div>
+
 {% endblock %}
