--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -18,6 +18,9 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
+        <a href="/" class="navbar-brand">
+            <span class="fw-bold text-secondary p-3">Job Tracker</span>
+        </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
