--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -35,9 +35,21 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Statistics</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Login</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        User
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/users/register">Register</a></li>
+                        <li><a class="dropdown-item" href="#">Login</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                    </ul>
                 </li>
+
             </ul>
         </div>
     </div>
