--- a/jobtracker/users/templates/users/register.html
+++ b/jobtracker/users/templates/users/register.html
@@ -5,7 +5,7 @@ Register User
 {% endblock %}
 
 {% block content %}
-<div class="container m-2">
+<div class="container text-bg-primary p-3 rounded-5">
     <h1>Register User</h1>
     <form action="/users/register/" method="post">
         {% csrf_token %}
