--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">
-            <span class="fw-bold text-secondary p-3">Job Tracker</span>
+            <span class="fw-bold text-secondary p-3">Job Lizard</span>
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
