--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -41,8 +41,8 @@
                         User
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/users/register">Register</a></li>
-                        <li><a class="dropdown-item" href="#">Login</a></li>
+                        <li><a class="dropdown-item" href="{% url 'users:register' %}">Register</a></li>
+                        <li><a class="dropdown-item" href="{% url 'users:login' %}">Login</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
