add logout feature

--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -27,7 +27,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'jobapps' %}">Job Apps</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">New App</a>
+                    <a class="nav-link active" href="{% url 'new-job' %}">New App</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Contractors</a>
@@ -43,10 +43,13 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'users:register' %}">Register</a></li>
                         <li><a class="dropdown-item" href="{% url 'users:login' %}">Login</a></li>
+                        <li><hr class="dropdown-divider"></li>
                         <li>
-                            <hr class="dropdown-divider">
+                            <form class="dropdown-item" action="{% url 'users:logout' %}" method="post">
+                                {% csrf_token %}
+                                <button>Logout</button>
+                            </form>
                         </li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
                     </ul>
                 </li>
 
