--- a/jobtracker/users/templates/users/login.html
+++ b/jobtracker/users/templates/users/login.html
@@ -12,11 +12,12 @@ User Login
                 <h1>User Login</h1>
             </div>
         </div>
-<!--        <div class="row align-items-start mb-2">-->
-<!--            <div class="col">-->
+        <div class="row align-items-start mb-2">
+            <div class="col">
 <!--                <img src="{% static 'images/hr_lizard.jpeg' %}"/>-->
-<!--            </div>-->
-<!--        </div>-->
+                <img src="images/hr_lizard.jpeg"/>
+            </div>
+        </div>
         <div class="row align-items-start mb-2">
             <div class="col">
                 <form action="/users/login/" method="post">
