--- a/jobtracker/jobapps/templates/jobapps/jobapp_page.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_page.html
@@ -38,6 +38,9 @@ Job Tracker - {{ jobapp.company }}
         <div class="col-3 my-2 text-start">
             <p class="h4 bg-primary text-light">Location</p>
         </div>
+        <div class="col-3 my-2 text-start">
+            <p class="h4 bg-primary text-light">Contractor</p>
+        </div>
     </div>
     <div class="row mb-4 text-align-start">
         <div class="col-2 text-start">
@@ -52,11 +55,39 @@ Job Tracker - {{ jobapp.company }}
         <div class="col-3 text-start">
             {{ jobapp.location_type }}
         </div>
+        <div class="col-3 text-start">
+            {{ jobapp.contractor_name }}
+        </div>
+    </div>
+    <div class="row mb-1">
+        <div class="col-2 my-2 text-start">
+            <p class="h4 bg-primary text-light">Payrate</p>
+        </div>
+        <div class="col-2 my-2 text-start">
+            <p class="h4 bg-primary text-light">Job Source</p>
+        </div>
+        <div class="col-3 my-2 text-start">
+            <p class="h4 bg-primary text-light">Job URL</p>
+        </div>
+    </div>
+    <div class="row mb-4 text-align-start">
+        <div class="col-2 text-start">
+            {{ jobapp.payrate }}
+        </div>
+        <div class="col-2 text-start">
+            {{ jobapp.job_source }}
+        </div>
+        <div class="col-2 text-start">
+            <a href="{{ jobapp.job_url }}" target="_blank">
+                {{ jobapp.title }}
+            </a>
+        </div>
     </div>
     <div class="row mb-4">
         <div class="col">
             <p class="h4 bg-primary text-light">Description</p>
-        {{ jobapp.description }}
+
+            <pre>{{ jobapp.description }}</pre>
         </div>
     </div>
 
