--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'jobapps' %}">Job Apps</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Contractors</a>
+                    <a class="nav-link active" href="/">Contractors</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="{% url 'new-job' %}">New App</a>
