move company to top of form, remove comma for city/state

--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -51,7 +51,7 @@ Job App List
                 {{ jobapp.company }}
             </div>
             <div class="jobapp col-2 text-start">
-                {{ jobapp.city }}, {{ jobapp.state }}
+                {{ jobapp.city }} {{ jobapp.state }}
             </div>
             <div class="jobapp col-1 text-start">
                 {{ jobapp.job_source }}
