--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -7,7 +7,18 @@ Job App List
 {% block content %}
 
 <div class="container m-2">
-    <h1 class="display-6 ms-2">Jobs Applied for</h1>
+    <div class="row p-1">
+        <div class="jobapp col-3 text-start">
+            <h2 class="display-6 ms-2">Jobs Applied for</h2>
+        </div>
+        <div class="jobapp col-1 text-start">
+            <h2 class="display-6 ms-2">
+                <a href="{% url 'search' %}">
+                    Search
+                </a>
+            </h2>
+        </div>
+    </div>
 
     <div class="container p-2">
         <div class="row p-1">
