--- a/jobtracker/jobapps/templates/jobapps/jobapp_page.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_page.html
@@ -61,6 +61,9 @@ Job Tracker - {{ jobapp.company }}
     </div>
     <div class="row mb-1">
         <div class="col-2 my-2 text-start">
+            <p class="h4 bg-primary text-light">Job Status</p>
+        </div>
+        <div class="col-2 my-2 text-start">
             <p class="h4 bg-primary text-light">Payrate</p>
         </div>
         <div class="col-2 my-2 text-start">
@@ -71,6 +74,9 @@ Job Tracker - {{ jobapp.company }}
         </div>
     </div>
     <div class="row mb-4 text-align-start">
+        <div class="col-2 text-start">
+            {{ jobapp.job_status }}
+        </div>
         <div class="col-2 text-start">
             {{ jobapp.payrate }}
         </div>
