--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -11,12 +11,15 @@ Job App List
         <div class="jobapp col-3 text-start">
             <h2 class="display-6 ms-2">Jobs Applied for</h2>
         </div>
-        <div class="jobapp col-1 text-start">
-            <h2 class="display-6 ms-2">
-                <a href="{% url 'search' %}">
+        <div class="jobapp col text-start">
+            <form class="d-flex" method=POST action="{% url 'search' %}">
+                {% csrf_token %}
+                <input class="form-control me-2" type="search" placeholder="search jobs" aria-label="Search">
+                <button class="btn btn-primary" type="submit">
                     Search
-                </a>
-            </h2>
+                </button>
+            </form>
+
         </div>
     </div>
 
