--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -9,7 +9,7 @@ Job App List
 <div class="container m-2">
     <div class="row p-1">
         <div class="jobapp col-3 text-start">
-            <h2 class="display-6 ms-2">Jobs Applied for</h2>
+            <h2 class="display-6 text-secondary ms-2"><b>Jobs Applied for</b></h2>
         </div>
         <div class="jobapp col text-start">
             <form class="d-flex" method=POST action="{% url 'search' %}">
