add bootstrap css to login/logout buttons

--- a/jobtracker/users/templates/users/login.html
+++ b/jobtracker/users/templates/users/login.html
@@ -26,7 +26,7 @@ User Login
                         <input type="hidden" name="next" value="{{ request.GET.next }}" />
                     {% endif %}
                     <div class="container mt-4">
-                        <button>Submit</button>
+                        <button class="btn btn-light">Submit</button>
                     </div>
                 </form>
             </div>
