--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -49,7 +49,7 @@
                         <li>
                             <form class="dropdown-item" action="{% url 'users:logout' %}" method="post">
                                 {% csrf_token %}
-                                <button>Logout</button>
+                                <button class="btn btn-primary">Logout</button>
                             </form>
                         </li>
                     </ul>
