add bootstrap formatting to create jpbapp button

--- a/jobtracker/jobapps/templates/jobapps/new_jobapp.html
+++ b/jobtracker/jobapps/templates/jobapps/new_jobapp.html
@@ -16,7 +16,7 @@ Job Tracker - New Job App
                 <form action="{% url 'new-job' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
-                    <button class="mt-3">Add Jobapp</button>
+                    <button class="btn btn-light mt-3">Add Jobapp</button>
                 </form>
             </div>
         </div>
