change search page if no results to include search terms

--- a/jobtracker/jobapps/templates/jobapps/search_job.html
+++ b/jobtracker/jobapps/templates/jobapps/search_job.html
@@ -73,7 +73,7 @@ Job Tracker - New Job App
         </table>
     </div>
     {% else %}
-    <h1>No Results</h1>
+    <h2 class="display-6 text-secondary ms-2">No Results for "{{ search_terms }}"</h2>
     {% endif %}
 </div>
 
