--- a/jobtracker/jobapps/templates/jobapps/jobapp_page.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_page.html
@@ -60,7 +60,7 @@ Job Tracker - {{ jobapp.company }}
         </div>
     </div>
     <div class="row mb-1">
-        <div class="col-2 my-2 text-start">
+        <div class="col-3 my-2 text-start">
             <p class="h4 bg-primary text-light">Job Status</p>
         </div>
         <div class="col-2 my-2 text-start">
@@ -74,8 +74,20 @@ Job Tracker - {{ jobapp.company }}
         </div>
     </div>
     <div class="row mb-4 text-align-start">
-        <div class="col-2 text-start">
+        <div class="col-3 text-start">
             {{ jobapp.job_status }}
+            <form class="d-flex" method=POST action="{% url 'jobapp' job_id=jobapp.id %}">
+                {% csrf_token %}
+                <select class="form-select m-3" aria-label="Status Update" name="job_status_update">
+                    <option selected></option>
+                    {% for status_type in status_types %}
+                        <option>{{ status_type }}</option>
+                    {% endfor %}
+                </select>
+                <button class="btn btn-primary m-3" type="submit">
+                    Update
+                </button>
+            </form>
         </div>
         <div class="col-2 text-start">
             {{ jobapp.payrate }}
