minor field name changes

--- a/jobtracker/jobapps/templates/jobapps/jobapp_page.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_page.html
@@ -8,7 +8,7 @@ Job Tracker - {{ jobapp.company }}
 <div class="container-sm">
     <div class="row mb-1 text-align-start">
         <div class="col">
-            <p class="h4 bg-primary text-light">Title</p>
+            <p class="h4 bg-primary text-light">Job Title</p>
         </div>
         <div class="col">
             <p class="h4 bg-primary text-light">Company</p>
@@ -64,7 +64,7 @@ Job Tracker - {{ jobapp.company }}
             <p class="h4 bg-primary text-light">Job Status</p>
         </div>
         <div class="col-2 my-2 text-start">
-            <p class="h4 bg-primary text-light">Payrate</p>
+            <p class="h4 bg-primary text-light">Pay Rate</p>
         </div>
         <div class="col-2 my-2 text-start">
             <p class="h4 bg-primary text-light">Job Source</p>
