add status field to search page

--- a/jobtracker/jobapps/templates/jobapps/search_job.html
+++ b/jobtracker/jobapps/templates/jobapps/search_job.html
@@ -29,7 +29,9 @@ Job Tracker - New Job App
                 <td class="jobapp text-start">
                     <p class="h4 h4 text-dark">Date</p>
                 </td>
-
+                <td class="jobapp text-start">
+                    <p class="h4 h4 text-dark">Status</p>
+                </td>
                 <td class="jobapp text-start">
                     <p class="h4 h4 text-dark">Job Title</p>
                 </td>
@@ -49,7 +51,9 @@ Job Tracker - New Job App
             {% for jobapp in jobapps %}
             <tr>
                 <td class="jobapp col-1 text-start">{{ jobapp.applied_dt|date:"SHORT_DATE_FORMAT" }}</td>
-
+                <td class="jobapp col text-start text-secondary">
+                        {{ jobapp.job_status }}
+                </td>
                 <td class="jobapp col text-start">
                     <a href="{% url 'jobapp' job_id=jobapp.id %}">
                         {{ jobapp.title }}
