change job no to job number

--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -46,7 +46,7 @@ Job App List
                     <p class="h4 h4 text-dark">Source</p>
                 </td>
                 <td class="jobapp text-start">
-                    <p class="h4 h4 text-dark">Job No</p>
+                    <p class="h4 h4 text-dark">Job Number</p>
                 </td>
             </tr>
             {% for jobapp in jobapps %}
