--- a/jobtracker/jobapps/templates/jobapps/search_job.html
+++ b/jobtracker/jobapps/templates/jobapps/search_job.html
@@ -45,7 +45,7 @@ Job Tracker - New Job App
                     <p class="h4 h4 text-dark">Source</p>
                 </td>
                 <td class="jobapp text-start">
-                    <p class="h4 h4 text-dark">Job No</p>
+                    <p class="h4 h4 text-dark">Job Number</p>
                 </td>
             </tr>
             {% for jobapp in jobapps %}
