--- a/jobtracker/jobapps/templates/jobapps/edit_jobapp.html
+++ b/jobtracker/jobapps/templates/jobapps/edit_jobapp.html
@@ -9,6 +9,11 @@ Job Tracker - {{ jobapp.company }}
     <form>
         <div class="row mb-1 text-align-start">
             <div class="col">
+                <a href="{% url 'edit-job' jobapp.id %}" class="btn btn-primary m-3" type="submit">Save Job</a>
+            </div>
+        </div>
+        <div class="row mb-1 text-align-start">
+            <div class="col">
                 <p class="h4 bg-primary text-light">Job Title</p>
             </div>
             <div class="col">
@@ -86,9 +91,9 @@ Job Tracker - {{ jobapp.company }}
                         <option>{{ status_type }}</option>
                         {% endfor %}
                     </select>
-                    <button class="btn btn-primary m-3" type="submit">
-                        Update
-                    </button>
+<!--                    <button class="btn btn-primary m-3" type="submit">-->
+<!--                        Update-->
+<!--                    </button>-->
                 </form>
             </div>
             <div class="col-2 text-start">
@@ -104,7 +109,7 @@ Job Tracker - {{ jobapp.company }}
         <div class="row mb-4">
             <div class="col">
                 <p class="h4 bg-primary text-light">Description</p>
-                <textarea rows="30" cols="120">{{ jobapp.description }}</textarea>
+                <textarea class="form-control" rows="20" cols="120">{{ jobapp.description }}</textarea>
             </div>
         </div>
     </form>
