--- a/jobtracker/jobapps/templates/jobapps/new_jobapp.html
+++ b/jobtracker/jobapps/templates/jobapps/new_jobapp.html
@@ -5,7 +5,7 @@ Job Tracker - New Job App
 {% endblock %}
 
 {% block content %}
-<div class="container-sm text-bg-primary p-3 rounded-5">
+<div class="container-sm text-bg-light p-3 rounded-5">
     <div class="row align-items-start">
         <div class="col mb-3">
             <h1>New Job Application</h1>
