--- a/jobtracker/templates/home.html
+++ b/jobtracker/templates/home.html
@@ -6,12 +6,12 @@ Job Tracker
 
 {% block content %}
 <div class="container m-2">
-    <p class="h4 bg-primary text-light">Job Statistics</p>
+    <p class="h4 bg-success text-light">Job Statistics</p>
     <p><b>Total jobs applied for:</b> {{ jobcount }}</p>
 </div>
 
 <div class="container m-2">
-    <p class="h4 bg-primary text-light">Count By Date</p>
+    <p class="h4 bg-success text-light">Count By Date</p>
     <div class="row p-1">
             <div class="jobapp col-2 text-start"><b>Date</b></div>
             <div class="jobapp col-2 text-start"><b>Number of jobs</b></div>
