--- a/jobtracker/jobapps/templates/jobapps/edit_jobapp.html
+++ b/jobtracker/jobapps/templates/jobapps/edit_jobapp.html
@@ -18,7 +18,7 @@ Job Tracker - {{ jobapp.company }}
                 <form action="{% url 'edit-job' jobapp.id %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button class="btn btn-light mt-3">Save Job</button>
+                    <button class="btn btn-success mt-3">Save Job</button>
                 </form>
             </div>
         </div>
