--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -16,7 +16,7 @@ Job App List
                 {% csrf_token %}
                 <input class="form-control me-2" type="search" placeholder="search jobs" aria-label="Search"
                        name="search_terms">
-                    <button class="btn btn-primary" type="submit">
+                    <button class="btn btn-success" type="submit">
                     Search
                 </button>
             </form>
@@ -57,7 +57,8 @@ Job App List
                         {{ jobapp.job_status }}
                 </td>
                 <td class="jobapp col text-start">
-                    <a href="{% url 'jobapp' job_id=jobapp.id %}">
+                    <a class="link-success link-offset-1 link-underline-opacity-50"
+                       href="{% url 'jobapp' job_id=jobapp.id %}">
                         {{ jobapp.title }}
                     </a>
                 </td>
