--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">
-            <span class="fw-bold text-secondary p-3">Job Lizard</span>
+            <span class="fw-bold text-success p-3">Job Lizard</span>
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -49,7 +49,7 @@
                         <li>
                             <form class="dropdown-item" action="{% url 'users:logout' %}" method="post">
                                 {% csrf_token %}
-                                <button class="btn btn-primary">Logout</button>
+                                <button class="btn btn-success">Logout</button>
                             </form>
                         </li>
                     </ul>
