--- a/jobtracker/users/templates/users/login.html
+++ b/jobtracker/users/templates/users/login.html
@@ -5,7 +5,7 @@ User Login
 {% endblock %}
 
 {% block content %}
-<div class="container text-bg-primary p-3 rounded-5">
+<div class="container text-bg-success p-3 rounded-5">
     <div class="container text-center">
         <div class="row align-items-start">
             <div class="col mb-4">
