fix search colors, change status names to regular case

--- a/jobtracker/jobapps/templates/jobapps/jobapp_list.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_list.html
@@ -54,7 +54,7 @@ Job App List
                 <td class="jobapp col-1 text-start">{{ jobapp.applied_dt|date:"SHORT_DATE_FORMAT" }}</td>
 
                 <td class="jobapp col text-start text-secondary">
-                        {{ jobapp.job_status }}
+                        <b>{{ jobapp.job_status }}</b>
                 </td>
                 <td class="jobapp col text-start">
                     <a class="link-success link-offset-1 link-underline-opacity-50"
