--- a/jobtracker/jobapps/templates/jobapps/search_job.html
+++ b/jobtracker/jobapps/templates/jobapps/search_job.html
@@ -16,7 +16,7 @@ Job Tracker - New Job App
                 {% csrf_token %}
                 <input class="form-control me-2" type="search" placeholder="search jobs" aria-label="Search"
                        name="search_terms">
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-success" type="submit">
                     Search
                 </button>
             </form>
@@ -52,10 +52,11 @@ Job Tracker - New Job App
             <tr>
                 <td class="jobapp col-1 text-start">{{ jobapp.applied_dt|date:"SHORT_DATE_FORMAT" }}</td>
                 <td class="jobapp col text-start text-secondary">
-                        {{ jobapp.job_status }}
+                        <b>{{ jobapp.job_status }}</b>
                 </td>
                 <td class="jobapp col text-start">
-                    <a href="{% url 'jobapp' job_id=jobapp.id %}">
+                    <a class="link-success link-offset-1 link-underline-opacity-50"
+                       href="{% url 'jobapp' job_id=jobapp.id %}">
                         {{ jobapp.title }}
                     </a>
                 </td>
@@ -86,7 +87,7 @@ Job Tracker - New Job App
                     {% csrf_token %}
                     <input class="form-control me-2" type="search" placeholder="search jobs" aria-label="Search"
                            name="search_terms">
-                    <button class="btn btn-primary" type="submit">
+                    <button class="btn btn-success" type="submit">
                         Search
                     </button>
                 </form>
