--- a/jobtracker/jobapps/templates/jobapps/jobapp_page.html
+++ b/jobtracker/jobapps/templates/jobapps/jobapp_page.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-Job Tracker - {{ jobapp.company }}
+Job Lizard - {{ jobapp.company }}
 {% endblock %}
 
 {% block content %}
