--- a/jobtracker/jobapps/templates/jobapps/new_jobapp.html
+++ b/jobtracker/jobapps/templates/jobapps/new_jobapp.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-Job Tracker - New Job App
+Job Lizard - New Job App
 {% endblock %}
 
 {% block content %}
