--- a/jobtracker/users/templates/users/login.html
+++ b/jobtracker/users/templates/users/login.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load static %}
 {% block title %}
-User Login
+Job Lizard - Login
 {% endblock %}
 
 {% block content %}
@@ -14,14 +14,13 @@ User Login
         </div>
         <div class="row align-items-start mb-2">
             <div class="col">
-<!--                <img src="{% static 'media/hr_lizard.jpeg' %}"/>-->
             </div>
         </div>
         <div class="row align-items-start mb-2">
             <div class="col">
                 <form action="{% url 'users:login' %}" method="post">
                     {% csrf_token %}
-                    {{ form }}
+                    {{ form.as_p }}
                     {% if request.GET.next %}
                         <input type="hidden" name="next" value="{{ request.GET.next }}" />
                     {% endif %}
