--- a/jobtracker/templates/layout.html
+++ b/jobtracker/templates/layout.html
@@ -31,7 +31,7 @@
                     <a class="nav-link active" href="{% url 'new-job' %}">New App</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/">Contractors</a>
+                    <a class="nav-link active" href="{% url 'contractors:contractor_list' %}">Contractors</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Statistics</a>
