--- a/jobtracker/contractors/templates/contractors/contractor_page.html
+++ b/jobtracker/contractors/templates/contractors/contractor_page.html
@@ -6,7 +6,34 @@ Job Lizard - {{ contractor.name }}
 
 {% block content %}
 <div class="container-sm">
-    <h1>contractor: {{ contractor.name }} / {{ contractor.company }}</h1>
+    <div class="row mb-1 text-align-start">
+        <div class="col-2">
+            <p class="h4 bg-success text-light">Name</p>
+        </div>
+        <div class="col">
+            <p class="h4 bg-success text-light">Company</p>
+        </div>
+        <div class="col-2">
+            <p class="h4 bg-success text-light">Phone</p>
+        </div>
+        <div class="col-3">
+            <p class="h4 bg-success text-light">Email</p>
+        </div>
+    </div>
+    <div class="row mb-4 text-align-start">
+        <div class="col-2 text-start">
+            {{ contractor.name }}
+        </div>
+        <div class="col text-start">
+            {{ contractor.company }}
+        </div>
+        <div class="col-2 text-start">
+            {{ contractor.phone }}
+        </div>
+        <div class="col-3 text-start">
+            {{ contractor.email }}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
