change message to 'last 30 days'

--- a/jobtracker/templates/home.html
+++ b/jobtracker/templates/home.html
@@ -7,7 +7,7 @@ Job Lizard - Main
 {% block content %}
 <div class="container m-2">
     <p class="h4 bg-success text-light">Job Statistics</p>
-    <p><b>Total jobs applied for:</b> {{ jobcount }}</p>
+    <p><b>Total jobs applied for in last 30 days:</b> {{ jobcount }}</p>
 </div>
 
 <div class="container m-2">
